--- a/src/styles/globalStyles.css
+++ b/src/styles/globalStyles.css
@@ -20,6 +20,7 @@ img {
   --color-grey-4:  #e9ecef;
   --color-grey-5:  #f1f3f5;
   --color-grey-6:  #ffffff;
+  --color-opacity: rgba(0,0,0, 0.5);
   --radius-default: 0.5rem;
 
   --title-1: 3rem;
@@ -35,14 +36,22 @@ img {
 
 body {
   font-family: "Poppins", sans-serif;
+  width: 100%;
+  height: 100%;
+}
+
+.bg-banner{
+  background-image: url(../assets/img/PexelsPhotoChristinaMorillo.svg);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: top;
 }
 
 .container {
   width: 76rem;
   max-width: 100%;
   margin: 0 auto;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding: 1rem;
 }
 
 @media(max-width: 991px){
